# engram

./: .gitignore  AGENTS.md  LICENSE  README.md
llmdoc/: index.md
llmdoc/architecture/: ai-pipeline.md  config-system.md  data-flow.md  database.md  system-overview.md
llmdoc/guides/: dev-setup.md  roadmap.md  tasks.md
llmdoc/overview/: requirements.md  tech-decisions.md  vision.md
llmdoc/reference/: api-spec.md  changelog.md  dependencies.md  gui-spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: embedding.rs  mod.rs  summarizer.rs  vlm.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/daemon/: capture.rs  context.rs  hasher.rs  idle.rs  mod.rs  summarizer_task.rs  vlm_task.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-ui/src/: App.tsx  index.css  index.tsx
src-ui/src/components/: Markdown.tsx
src-ui/src/pages/: Chat.tsx  Entities.tsx  Search.tsx  Settings.tsx  Summaries.tsx  Timeline.tsx
